--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,4 +41,18 @@
         app:backgroundTint="#7995fd" />
 
 
+    <TextView
+        android:id="@+id/tvIP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center"
+        android:letterSpacing="0.02"
+        android:text="Your IP Number"
+        android:textColor="#949191"
+        android:textSize="10dp"
+        android:textStyle="bold" />
+
+
 </LinearLayout>
